# tree-sitter-navis

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  bash.exe.stackdump  grammar.js  package.json  parser.exp  parser.lib  pnpm-lock.yaml  tree-sitter.json
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: blocks.txt  body.txt  comments.txt  directives.txt  endpoint-vars.txt  file-scripts.txt  headers.txt  placeholders.txt  requests.txt
tests/: eof.rs
