[package]
name = "tree-sitter-navis"
description = "Tree-sitter grammar for the Navis .navis file format"
version = "0.1.0"
authors = ["Carlos J. Ortiz"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "navis", "http"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/carlosjortiz/tree-sitter-navis"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
    "LICENSE",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.25"

[build-dependencies]
cc = "1.0"
